// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input UI component Should render snapshots Should render disabled input snapshot 1`] = `
<DocumentFragment>
  <label
    class="label input-field"
  >
    <span
      class="input-field__label"
    />
    <input
      autocomplete="off"
      autocorrect="off"
      class="input"
      disabled=""
      name=""
      type="text"
    />
  </label>
</DocumentFragment>
`;

exports[`Input UI component Should render snapshots Should render empty input snapshot 1`] = `
<DocumentFragment>
  <label
    class="label input-field"
  >
    <span
      class="input-field__label"
    />
    <input
      autocomplete="off"
      autocorrect="off"
      class="input"
      name=""
      type="text"
    />
  </label>
</DocumentFragment>
`;

exports[`Input UI component Should render snapshots Should render input with label snapshot 1`] = `
<DocumentFragment>
  <label
    class="label input-field"
  >
    <span
      class="input-field__label"
    >
      label
    </span>
    <input
      autocomplete="off"
      autocorrect="off"
      class="input"
      name=""
      type="text"
    />
  </label>
</DocumentFragment>
`;
